syntax = "proto3";

package yandex.cloud.video.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/video/v1;video";
option java_package = "yandex.cloud.api.video.v1";

message Thumbnail {
  reserved 3 to 99;
  // ID of the thumbnail.
  string id = 1;
  // ID of the channel where the thumbnail was created.
  string channel_id = 2;

  // Time when thumbnail was created.
  google.protobuf.Timestamp created_at = 100;
}
